# python-escpos

./: .gitignore  .gitmodules  .hgignore  .mailmap  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG  CHANGELOG.rst  CONTRIBUTING.rst  INSTALL  LICENSE  MANIFEST  MANIFEST.in  README  README.md  README.rst  __init__.py  appveyor.yml  codecov.yml  escpos.py  generate_authors.sh  printer.py  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: black.yml  codeql-analysis.yml  documentation.yml  pythonpackage-windows.yml  pythonpackage.yml
capabilities-data/: .travis.yml  README.md
capabilities-data/data/: encoding.yml
capabilities-data/data/profile/: AF-240.yml  CT-S651.yml  NT-5890K.yml  OCD-100.yml  OCD-300.yml  P822D.yml  POS-5890.yml  RP326.yml  SP2000.yml  Sunmi-V2.yml  TEP-200M.yml  TM-P80-42col.yml  TM-P80.yml  TM-T88II.yml  TM-T88III.yml  TM-T88IV-SA.yml  TM-T88IV.yml  TM-T88V.yml  TM-U220.yml  TSP600.yml  TUP500.yml  ZJ-5870.yml  default.yml  simple.yml
capabilities-data/doc/: add-your-printer.md
capabilities-data/scripts/: collate.py
debian/: changelog  control  copyright  gbp.conf  rules
doc/: Makefile  api.rst  conf.py  generate_authors.sh  index.rst  make.bat  requirements.txt  spelling_wordlist.txt
doc/api/: capabilities.rst  cli.rst  codepages.rst  config.rst  constants.rst  escpos.rst  exceptions.rst  image.rst  katakana.rst  magicencode.rst  printer.rst
doc/capability_templates/: capabilities-template-encoding.jinja  capabilities-template.jinja
doc/dev/: release-process.rst  repository.rst  todo.rst
doc/printer_profiles/: available-encodings.rst  available-profiles.rst  capabilities.rst
doc/user/: .directory  available-profiles.rst  barcode.rst  cli-user.rst  dependencies.rst  installation.rst  methods.rst  printers.rst  raspi.rst  todo.rst  usage.rst
escpos/: __init__.py  cli.py  config.py  constants.py  escpos.py  exceptions.py  image.py  printer.py  utils.py
examples/: barcodes.py  block_text.py  codepage_tables.py  font_variations.py  kanji.py  qr_code.py  receipt.py  software_barcode.py  software_columns.py  weather.py
examples/docker-flask/: Dockerfile  README.md  app.py  requirements.txt
examples/graphics/climacons/: readme.md
src/escpos/: __init__.py  capabilities.json  capabilities.py  capabilities.yml  cli.py  codepages.py  config.py  constants.py  escpos.py  exceptions.py  image.py  katakana.py  magicencode.py  printer.py
src/escpos/printer/: __init__.py  cups.py  dummy.py  file.py  lp.py  network.py  serial.py  usb.py  win32raw.py
src/escpos/types/: __init__.py
test/: Dies ist ein Test.LF.txt  conftest.py  test_abstract_base_class.py  test_cli.py  test_config.py  test_function_barcode.py  test_function_buzzer.py  test_function_cashdraw.py  test_function_check_barcode.py  test_function_cut.py  test_function_dummy_clear.py  test_function_image.py  test_function_linedisplay.py  test_function_panel_button.py  test_function_qr_native.py  test_function_qr_non-native.py  test_function_set.py  test_function_softbarcode.py  test_function_text.py  test_functions.py  test_image.py  test_load_module.py  test_load_module_missing_capability.py  test_magicencode.py  test_printer_file.py  test_printer_network.py  test_profile.py  test_raise_arbitrary_error.py  test_with_statement.py
test/test_functions/: test_function_barcode.py  test_function_cashdraw.py  test_function_check_barcode.py  test_function_cut.py  test_function_dummy_clear.py  test_function_image.py  test_function_kanji.py  test_function_linedisplay.py  test_function_panel_button.py  test_function_qr_native.py  test_function_qr_non-native.py  test_function_set.py  test_function_softbarcode.py  test_function_software_columns.py  test_function_text.py  test_functions.py
test/test_printers/: test_printer_cups.py  test_printer_file.py  test_printer_lp.py  test_printer_network.py  test_printer_serial.py  test_printer_usb.py  test_printer_win32raw.py
