[metadata]
name = python-escpos
url = https://github.com/python-escpos/python-escpos
description = Python library to manipulate ESC/POS Printers
long_description = file: README.rst
license = MIT
license_file = LICENSE
author = Manuel F Martinez and others
author_email = dev@pkanzler.de
maintainer = Patrick Kanzler
maintainer_email = dev@pkanzler.de
keywords = ESC/POS, thermoprinter, voucher printer, printing, receipt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Office/Business :: Financial :: Point-Of-Sale
project_urls =
    Bug Tracker = https://github.com/python-escpos/python-escpos/issues
    Documentation = https://python-escpos.readthedocs.io/en/latest/
    Release Notes = https://github.com/python-escpos/python-escpos/releases

[options]
python_requires = >=3.6
zip_safe = false
include_package_data = true
install_requires =
    pyusb>=1.0.0
    Pillow>=2.0
    qrcode>=4.0
    pyserial
    python-barcode>=0.9.1,<1
    setuptools
    six
    appdirs
    PyYAML
    argparse
    argcomplete
    future
setup_requires = setuptools_scm
tests_require =
    jaconv
    tox
    pytest!=3.2.0,!=3.3.0
    pytest-cov
    pytest-mock
    nose
    scripttest
    mock
    hypothesis>4
    flake8
    sphinxcontrib-spelling>=7.2.0

[nosetests]
verbosity=3
with-doctest=1

[flake8]
exclude = .git,.tox,.github,.eggs,__pycache__,doc/conf.py,build,dist,capabilities-data,test,src/escpos/constants.py
max-line-length = 120
# future-imports = absolute_import, division, print_function, unicode_literals  # we are not there yet
