[metadata]
name = python-escpos
url = https://github.com/python-escpos/python-escpos
description = Python library to manipulate ESC/POS Printers
long_description = file: README.rst
license = MIT
license_file = LICENSE
author = python-escpos developers
author_email = dev@pkanzler.de
maintainer = Patrick Kanzler
maintainer_email = dev@pkanzler.de
keywords = ESC/POS, thermoprinter, voucher printer, printing, receipt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Office/Business :: Financial :: Point-Of-Sale
project_urls =
    Bug Tracker = https://github.com/python-escpos/python-escpos/issues
    Documentation = https://python-escpos.readthedocs.io/en/latest/
    Release Notes = https://github.com/python-escpos/python-escpos/releases

[options]
python_requires = >=3.8
zip_safe = false
include_package_data = true
install_requires =
    Pillow>=2.0
    qrcode>=4.0
    python-barcode>=0.9.1,<1
    setuptools
    six
    appdirs
    PyYAML
    argparse
    argcomplete
    importlib_resources
setup_requires = setuptools_scm
tests_require =
    jaconv
    tox>=4.11
    pytest>=7.4
    pytest-cov
    pytest-mock
    scripttest
    mock
    hypothesis>=6.83
    flake8
    sphinxcontrib-spelling>=8.0.0

[options.extras_require]
usb =
    pyusb>=1.0.0
serial =
    pyserial
cups =
    pycups
win32 =
    pywin32; platform_system=='Windows'
all =
    pyusb>=1.0.0
    pyserial
    pycups
    pywin32; platform_system=='Windows'

[flake8]
exclude = .git,.tox,.github,.eggs,__pycache__,doc/conf.py,build,dist,capabilities-data,test,src/escpos/constants.py
max-line-length = 120
extend-ignore = E203, W503
